# phonetic-portmantout-v2

./: .gitignore  .gitmodules  TODO.md  dictionary_length.py  format_tout.py  phoneme_graph.json  phonport.tex  pyproject.toml  the_big_word.json
phonetic_portmantout_v2/: __main__.py  cmutils.py  deduplicate_words.py  desperate_connect.py  join.py  particle_generator.py  phoneme_graph.py
