[tool.poetry]
name = "phonetic-portmantout-v2"
version = "0.1.0"
description = ""
authors = ["Kyle Anthony Williams <kyle.anthony.williams2@gmail.com>"]
readme = "README.md"
packages = [{include = "phonetic_portmantout_v2"}]

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.0"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
